# equate

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  pnpm-lock.yaml  setup.sh
apps/client/: index.html  package.json  vite.config.ts
apps/client/src/: App.tsx  types.ts
apps/client/src/components/: Game.tsx  GameBoard.tsx  Lobby.tsx  ScoreBoard.tsx  TileRack.tsx
apps/client/src/store/: gameStore.ts
apps/client/src/ws/: client.ts
apps/server/: Cargo.toml
apps/server/src/: main.rs  messages.rs  room.rs  routes.rs  ws_handler.rs
